--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<!-- Mirrored from admin.lms.tsu.ge/Security by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Nov 2019 23:37:26 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-<head><title>
+<html xmlns="http://www.w3.org/1999/xhtml" class="  ext-strict"><head><title>
 	სტუდენტების რეესტრი - აუტენტიფიკაცია
 </title>
+   </title>
     <link href="Content/Application.yui.css" rel="stylesheet"
         type="text/css" />
     <link href="Content/resources/css/ext-all.yui.css" rel="stylesheet"
@@ -15,7 +9,6 @@
     <script src="Scripts/ext-base.yui.js" type="text/javascript"></script>
     <script src="Scripts/ext-all.yui.js" type="text/javascript"></script>
     <script src="Scripts/Application.yui.js" type="text/javascript"></script>
-    
     
     <script type="text/javascript">
         Ext.onReady(function () {
@@ -26,10 +19,8 @@
         });
     </script>
 </head>
-<body>
-    <div id="logon_container">
-    </div>
-</body>
+<body class="   ext-webkit ext-chrome">
+    <div id="logonForm" class=" x-panel x-form-label-right" style="width: 280px; position: relative; left: 628px; top: 306px;"><div class="x-panel-tl"><div class="x-panel-tr"><div class="x-panel-tc"><div class="x-panel-header x-unselectable x-panel-icon icon-lock" id="ext-gen5"><span class="x-panel-header-text" id="ext-gen9">აუტენტიფიკაცია</span></div></div></div></div><div class="x-panel-bwrap" id="ext-gen6"><div class="x-panel-ml"><div class="x-panel-mr"><div class="x-panel-mc" id="ext-gen8"><form class="x-panel-body x-form" method="POST" id="ext-gen4" style="width: 268px;"><div id="ext-comp-1006" class=" x-panel" style="width: 268px;"><div class="x-panel-bwrap" id="ext-gen11"><div class="x-panel-body x-panel-body-noheader" id="ext-gen12" style="width: 268px;"><div id="ext-comp-1007" class=" x-panel x-form-label-right"><div class="x-panel-bwrap" id="ext-gen13"><div class="x-panel-body x-panel-body-noheader" id="ext-gen14"><div class="x-form-item " tabindex="-1" id="ext-gen16"><label for="ext-comp-1001" style="width:100px;" class="x-form-item-label" id="ext-gen17">მომხმარებელი:</label><div class="x-form-element" id="x-form-el-ext-comp-1001" style="padding-left:105px"><input type="text" size="20" autocomplete="off" id="ext-comp-1001" name="userName" class=" x-form-text x-form-field"></div><div class="x-form-clear-left"></div></div><div class="x-form-item " tabindex="-1" id="ext-gen18"><label for="ext-comp-1002" style="width:100px;" class="x-form-item-label" id="ext-gen19">პაროლი:</label><div class="x-form-element" id="x-form-el-ext-comp-1002" style="padding-left:105px"><input type="password" size="20" autocomplete="off" id="ext-comp-1002" name="password" class=" x-form-text x-form-field"></div><div class="x-form-clear-left"></div></div><label id="ext-comp-1003" class=" x-hide-display">შეიყვანეთ დროებითი კოდი, რომელიც მობილურზე გამოგეგზავნათ</label><div class="x-form-item  x-hide-display" tabindex="-1" id="ext-gen20"><label for="ext-comp-1004" style="width:100px;" class="x-form-item-label" id="ext-gen21">კოდი:</label><div class="x-form-element" id="x-form-el-ext-comp-1004" style="padding-left:105px"><input type="smsCode" size="20" autocomplete="off" id="ext-comp-1004" name="smsCode" class=" x-form-text x-form-field x-hide-display x-item-disabled" disabled=""></div><div class="x-form-clear-left"></div></div><div class="x-form-item " tabindex="-1" id="ext-gen22"><label for="ext-comp-1005" style="width:100px;" class="x-form-item-label" id="ext-gen23"></label><div class="x-form-element" id="x-form-el-ext-comp-1005" style="padding-left:105px"><div class="x-form-check-wrap" id="ext-gen24"><input type="checkbox" autocomplete="off" id="ext-comp-1005" name="ext-comp-1005" class=" x-form-checkbox x-form-field"><label for="ext-comp-1005" class="x-form-cb-label" id="ext-gen25">დამიმახსოვრე</label></div></div><div class="x-form-clear-left"></div></div><div id="ext-comp-1008" class=" x-panel" style="width: 268px;"><div class="x-panel-bwrap" id="ext-gen26"><div class="x-panel-body x-panel-body-noheader x-column-layout-ct" id="ext-gen27" style="padding: 5px; width: 258px;"><div class="x-column-inner" id="ext-gen29" style="width: 258px;"><table id="ext-comp-1009" cellspacing="0" class="x-btn  x-btn-text-icon x-hide-display x-column" style="width: 150px;"><tbody class="x-btn-small x-btn-icon-small-left"><tr><td class="x-btn-tl"><i>&nbsp;</i></td><td class="x-btn-tc"></td><td class="x-btn-tr"><i>&nbsp;</i></td></tr><tr><td class="x-btn-ml"><i>&nbsp;</i></td><td class="x-btn-mc"><em class="" unselectable="on"><button type="button" id="ext-gen31" class=" x-btn-text icon-key">კოდის გენერირება</button></em></td><td class="x-btn-mr"><i>&nbsp;</i></td></tr><tr><td class="x-btn-bl"><i>&nbsp;</i></td><td class="x-btn-bc"></td><td class="x-btn-br"><i>&nbsp;</i></td></tr></tbody></table><table id="loginBtn" cellspacing="0" class="x-btn  x-btn-text-icon x-column" style="margin-left: 5px; float: right; width: 100px;"><tbody class="x-btn-small x-btn-icon-small-left"><tr><td class="x-btn-tl"><i>&nbsp;</i></td><td class="x-btn-tc"></td><td class="x-btn-tr"><i>&nbsp;</i></td></tr><tr><td class="x-btn-ml"><i>&nbsp;</i></td><td class="x-btn-mc"><em class="" unselectable="on"><button type="button" id="ext-gen32" class=" x-btn-text icon-key">შესვლა</button></em></td><td class="x-btn-mr"><i>&nbsp;</i></td></tr><tr><td class="x-btn-bl"><i>&nbsp;</i></td><td class="x-btn-bc"></td><td class="x-btn-br"><i>&nbsp;</i></td></tr></tbody></table><div class="x-clear" id="ext-gen30"></div></div></div></div></div></div></div></div></div></div></div></form></div></div></div><div class="x-panel-bl x-panel-nofooter" id="ext-gen7"><div class="x-panel-br"><div class="x-panel-bc"></div></div></div></div></div></div>
 
-<!-- Mirrored from admin.lms.tsu.ge/Security by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Nov 2019 23:37:29 GMT -->
-</html>
+
+</body></html>
